feat: delete a course
